--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,11 @@
-FROM node:20-alpine
+FROM node:20
 
-# Create app directory
 WORKDIR /app
 
-# Install dependencies
 COPY package*.json ./
 RUN npm install
 
-# Bundle app source
 COPY . .
 
-# Expose port
 EXPOSE 3000
-
 CMD ["npm", "start"]
